@@ -11,6 +11,7 @@ var Promise = window.Promise || require('es6-promise').Promise;
 var AlgoliaSearch = require('../../AlgoliaSearch');
 var errors = require('../../errors');
 var inlineHeaders = require('../../browser/inline-headers');
+var places = require('../../places.js');
 
 function algoliasearch(applicationID, apiKey, opts) {
   var cloneDeep = require('lodash/lang/cloneDeep');
@@ -28,6 +29,7 @@ function algoliasearch(applicationID, apiKey, opts) {
 
 algoliasearch.version = require('../../version.js');
 algoliasearch.ua = 'Algolia for ReactNative ' + algoliasearch.version;
+algoliasearch.initPlaces = places(algoliasearch);
 
 // we expose into window no matter how we are used, this will allow
 // us to easily debug any website running algolia
